partial banner fix so it works on small screens

--- a/pages/partner-with-intv/partner-with-intv.module.scss
+++ b/pages/partner-with-intv/partner-with-intv.module.scss
@@ -161,8 +161,7 @@
       position: relative;
   
       img {
-        width: 10em;
-        margin-bottom: -4.5em;       
+        width: 10em; 
         @media screen and (min-width: $md) {
           width: 20em;
           margin-bottom: -1em;
